# code_inventory_scanner

./: DESIGN.md  README.md  mkdocs.yml  pyproject.toml  scaffold.txt
docs/: architecture.md  index.md
docs/api/: cli.md  csv_writer.md  detectors.md  index.md  logging_config.md  models.md  scanner.md  service.md
src/code_inventory/: __init__.py  cli.py  csv_writer.py  detectors.py  logging_config.py  models.py  scanner.py  service.py
tests/integration/: test_cli_inventory.py
tests/unit/: test_cli.py  test_csv_writer.py  test_detectors.py  test_logging_config.py  test_models.py  test_scanner.py  test_service.py
