[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-inventory-scanner"
version = "0.1.0"
description = "Scan folders for code repositories and nested projects, then export a CSV inventory."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matt Briggs" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0"
]

[project.scripts]
code-inventory = "code_inventory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"